--- a/SquidQuiz/src/main/webapp/resources/css/main.css
+++ b/SquidQuiz/src/main/webapp/resources/css/main.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 .content{
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
+    position : relative;
 }
 .video.con{
     width: 100%;
@@ -9,7 +10,6 @@
     overflow: hidden;
 }
 .video-con video{
-    width: 100%;
     overflow: hidden;
     position: relative;
   }
@@ -17,8 +17,13 @@
 	  position: absolute;
 	  width: 500px;
 	  height: 250px;
-	  top: 400px;
-	  left: 720px;
+	  position: absolute;
+	  top: 35%;
+      left: 50%; 
+	  transform: translateX(-50%);
+
+/* 	  top: 400px; */
+/* 	  left: 720px; */
 	  opacity: 0.5;
 	  background-color: pink;
 }
