--- a/SquidQuiz/src/main/webapp/resources/css/main.css
+++ b/SquidQuiz/src/main/webapp/resources/css/main.css
@@ -24,8 +24,21 @@
 
 /* 	  top: 400px; */
 /* 	  left: 720px; */
-	  opacity: 0.5;
-	  background-color: pink;
+/* 	  opacity: 0.5; */
+/* 	  background-color: pink; */
+}
+.game-area{
+	 position: absolute;
+	  width: 700px;
+	  height: 60%;
+	  position: absolute;
+	  top: 35%;
+      left: 50%; 
+	  transform: translateX(-50%);
+/* 	  opacity: 0.5; 자식 태그까지 투명도를 주는 함수*/
+	  background-color: rgba(115, 228, 91, 0.5);
+/* 	  border-color: transparent; */
+	  display: none;
 }
 .Game-btn{
 	width: 500px;
@@ -33,4 +46,121 @@
 	background-color: pink;
 	cursor: pointer;
 	font-size: 8.5em;
+	display: block;
+	opacity: 0.5;
+	border-radius:20px;
+}
+.game_btn_insert{
+	position:absolute;
+	top:80%;
+	left:8%;
+	width: 150px;
+	height: 17%;
+	border: none;
+	cursor: pointer;
+	font-weight: bold;
+	font-size: 1em;
+	border-radius:20px;
+}
+.game_btn_insert:hover{
+	font-size: 1.2em;
+}
+.game_btn_start{
+	position: absolute;
+	top:80%;
+	left:38%;
+	background-color: pink;
+	width: 150px;
+	height: 17%;
+	border: none;
+	cursor: pointer;
+	font-weight: bold;
+	font-size: 1em;
+	border-radius:20px;
+}
+.game_btn_start:hover{
+	font-size: 1.2em;
+}
+
+.game_btn_delete{
+	position:absolute;
+	top:80%;
+	left:70%;
+	width: 150px;
+	height: 17%;
+	border: none;
+	cursor: pointer;
+	font-weight: bold;
+	font-size: 1em;
+	border-radius:20px;
+}
+.game_btn_delete:hover{
+	font-size: 1.2em;
+}
+
+
+.game_insert_info{
+	position:absolute;
+	top:30%;
+	left:30%;
+	display: none;
+}
+
+/* 퀴즈 시작 버튼 클릭 시 */
+.game_start_O{
+	position:absolute;
+	top:80%;
+	left:7%;
+	width: 300px;
+	height: 17%;
+	background-color: yellow;
+	border: none;
+	cursor: pointer;
+	font-size: 1em;
+	font-weight: bold;
+	display: none;
+}
+.game_start_O:hover{
+	font-size:1.2em;
+	background-color: #fff;
+}
+.game_start_X{
+	position:absolute;
+	top:80%;
+	left:51%;
+	width: 300px;
+	height: 17%;
+	background-color: pink;
+	border: none;
+	cursor: pointer;
+	font-size: 1em;
+	font-weight: bold;
+	display: none;
+}
+.game_start_X:hover{
+	font-size:1.2em;
+	background-color: #fff;
+}
+
+
+.sec7-text-box{
+	position:absolute;
+	top: 10%;
+	left: 50%; 
+	color: white;
+	transform: translateX(-50%);
+}
+.font15{
+	font-size: 2em;
+	font-weight: bold;
+	color: #fff;
+	text-shadow: 0 0 7px #fff, 0 0 10px #80ff00, 0 0 21px #00ff00, 0 0 42px #ff80c0,
+    0 0 82px #ff80c0, 0 0 92px #ff80c0, 0 0 102px #ff80c0, 0 0 151px #ff80c0;
+}
+.font40{
+	font-size: 1.2em;
+	font-weight: bold;
+	color: #fff;
+	text-shadow: 0 0 7px #fff, 0 0 10px #80ff00, 0 0 21px #00ff00, 0 0 42px #ff80c0,
+    0 0 82px #ff80c0, 0 0 92px #ff80c0, 0 0 102px #ff80c0, 0 0 151px #ff80c0;
 }
