마이페이지 수정

--- a/SquidQuiz/src/main/webapp/resources/css/header.css
+++ b/SquidQuiz/src/main/webapp/resources/css/header.css
@@ -43,4 +43,7 @@
 	font-size: 20px;
 	text-align: center;
 	font-weight: bold;
+	
 }
+.navi{height:50px;}
+.login-btn button{border: 0; outline: 0;font-size: 12px; cursor: pointer;}
