--- a/SquidQuiz/src/main/webapp/resources/css/main.css
+++ b/SquidQuiz/src/main/webapp/resources/css/main.css
@@ -93,6 +93,7 @@
 	font-weight: bold;
 	font-size: 1em;
 	border-radius:20px;
+	display: none;
 }
 .game_btn_delete:hover{
 	font-size: 1.2em;
@@ -100,6 +101,12 @@
 
 
 .game_insert_info{
+	position:absolute;
+	top:30%;
+	left:30%;
+	display: none;
+}
+.game_delete_info{
 	position:absolute;
 	top:30%;
 	left:30%;
