--- a/SquidQuiz/src/main/webapp/resources/css/login.css
+++ b/SquidQuiz/src/main/webapp/resources/css/login.css
@@ -1,3 +1,20 @@
 @charset "UTF-8";
 
 .myLogo{display : block ; margin : 0 auto ;}
+
+.input-box{ position:relative; margin:10px 700px; }
+.input-box > input{ background:transparent; border:none; border-bottom: solid 1px #ccc; padding:20px 0px 5px 0px; font-size:14pt; width:100%; }
+input::placeholder{ color:transparent; }
+input:placeholder-shown + label{ color:#aaa; font-size:14pt; top:15px; }
+input:focus + label, label{ color:#8aa1a1; font-size:10pt; pointer-events: none; position: absolute; left:0px; top:0px; transition: all 0.2s ease ; -webkit-transition: all 0.2s ease; -moz-transition: all 0.2s ease; -o-transition: all 0.2s ease; }
+input:focus, input:not(:placeholder-shown){ border-bottom: solid 1px #8aa1a1; outline:none; }
+
+.link{width:500px;}
+.link>a{width:70px; float:right;}
+a {text-decoration-line: none; color:#aaa;}
+a:hover{color:#8aa1a1;}
+
+.log-btn{margin:10px;width:500px;height:40px;border-radius: 5px;color:white;border:none;border-right:0px; border-top:0px; boder-left:0px; boder-bottom:0px;background-color: rgb(247, 105, 136);font-weight: bold;cursor:pointer;}
+.log-btn:hover{background-color: rgb(230, 87, 118);}
+.join-btn{width:500px;height:40px;border-radius: 5px;color:white;border:none;background-color: rgb(247, 105, 136);font-weight: bold;cursor:pointer;}
+.join-btn:hover{background-color: rgb(230, 87, 118);}
