--- a/SquidQuiz/src/main/webapp/resources/css/main.css
+++ b/SquidQuiz/src/main/webapp/resources/css/main.css
@@ -149,6 +149,39 @@
 	background-color: #fff;
 }
 
+.game_start_O1{
+	position:absolute;
+	top:80%;
+	left:7%;
+	width: 300px;
+	height: 17%;
+	background-color: yellow;
+	border: none;
+	cursor: pointer;
+	font-size: 1em;
+	font-weight: bold;
+}
+.game_start_O1:hover{
+	font-size:1.2em;
+	background-color: #fff;
+}
+.game_start_X1{
+	position:absolute;
+	top:80%;
+	left:51%;
+	width: 300px;
+	height: 17%;
+	background-color: pink;
+	border: none;
+	cursor: pointer;
+	font-size: 1em;
+	font-weight: bold;
+}
+.game_start_X1:hover{
+	font-size:1.2em;
+	background-color: #fff;
+}
+
 
 .sec7-text-box{
 	position:absolute;
@@ -170,4 +203,21 @@
 	color: #fff;
 	text-shadow: 0 0 7px #fff, 0 0 10px #80ff00, 0 0 21px #00ff00, 0 0 42px #ff80c0,
     0 0 82px #ff80c0, 0 0 92px #ff80c0, 0 0 102px #ff80c0, 0 0 151px #ff80c0;
+}
+.quiz_show{
+	display: none;
+}
+td{
+	font-weight: bold;
+}
+.quiz{
+	font-size: 2em;
+	font-weight: bold;
+	position: absolute;
+	width: 700px;
+	height: 80%;
+	top:20%;
+	left: 50%;
+	transform: translateX(-50%);
+	color: black;
 }
