--- a/SquidQuiz/src/main/webapp/resources/css/header.css
+++ b/SquidQuiz/src/main/webapp/resources/css/header.css
@@ -39,7 +39,8 @@
 .menu_area .navi a{
     text-decoration: none;
 	color: black;
-	padding: 20px 25px;
+	padding: 1px 24px;
+	padding-top:23px;
 	font-size: 20px;
 	text-align: center;
 	font-weight: bold;
